@@ -4,6 +4,7 @@ Changelog
 2.0a5 (unreleased)
 ------------------
 
+- fix(js): Replace ie unsupported use of dataset by getAttribute [toutpt]
 - Don't replace a link if the result is a link [toutpt]
 - Fix kinomap endpoint (no more oembed support -> url2embed) [toutpt]
 - Fix internal provider to work with dexterity content types [toutpt]
